--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     def biometric_version = '1.0.1'
     implementation "androidx.biometric:biometric:$biometric_version"
     implementation "androidx.appcompat:appcompat:$app_compat_version"
+    implementation "androidx.preference:preference:1.1.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
