--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,8 +44,8 @@ dependencies {
     def biometric_version = '1.0.1'
     implementation "androidx.biometric:biometric:$biometric_version"
     implementation "androidx.appcompat:appcompat:$app_compat_version"
-    implementation "androidx.preference:preference:1.1.0"
-    implementation "androidx.security:security-crypto:1.0.0-beta01"
+    implementation "androidx.preference:preference:1.1.1"
+    implementation "androidx.security:security-crypto:1.0.0-rc01"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
