--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,20 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
+def localProperties = new Properties()
+localProperties.load(new FileInputStream(rootProject.file("local.properties")))
+
+repositories {
+    maven {
+        name = "GitHubPackages"
+        url = uri("https://maven.pkg.github.com/ZVernam/vernam-tools")
+        credentials {
+            username = localProperties["gpr.user"] ?: System.getenv("USERNAME")
+            password = localProperties["gpr.key"] ?: System.getenv("TOKEN")
+        }
+    }
+}
+
 android {
     compileSdkVersion 29
 
@@ -70,4 +84,7 @@ dependencies {
     // alternately - if using Java8, use the following instead of lifecycle-compiler
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
+    // vernam library
+    implementation 'com.github.zeckson:vernam-tools:0.2.0'
 }
