--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,16 +2,13 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
-def localProperties = new Properties()
-localProperties.load(new FileInputStream(rootProject.file("local.properties")))
-
 repositories {
     maven {
         name = "GitHubPackages"
         url = uri("https://maven.pkg.github.com/ZVernam/vernam-tools")
         credentials {
-            username = localProperties["gpr.user"] ?: System.getenv("USERNAME")
-            password = localProperties["gpr.key"] ?: System.getenv("TOKEN")
+            username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
+            password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
         }
     }
 }
