--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,26 +14,26 @@ repositories {
 }
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion = 29
 
     testOptions {
         unitTests.returnDefaultValues = true
     }
 
     defaultConfig {
-        applicationId "com.github.zeckson.vernam"
-        minSdkVersion 24
-        targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        applicationId = "com.github.zeckson.vernam"
+        minSdkVersion(24)
+        targetSdkVersion(29)
+        versionCode = 1
+        versionName = "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
         release {
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
+            minifyEnabled = true
+            proguardFiles(getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro")
         }
     }
 
@@ -42,8 +42,8 @@ android {
 
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
     }
     kotlinOptions {
         jvmTarget = "1.8"
@@ -53,35 +53,35 @@ android {
 
 dependencies {
     def biometric_version = "1.0.1"
-    implementation "androidx.biometric:biometric:$biometric_version"
-    implementation "androidx.appcompat:appcompat:$app_compat_version"
-    implementation "androidx.preference:preference:1.1.1"
-    implementation "androidx.security:security-crypto:1.1.0-alpha01"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "com.google.android.material:material:1.1.0"
-    implementation "androidx.constraintlayout:constraintlayout:1.1.3"
+    implementation("androidx.biometric:biometric:$biometric_version")
+    implementation("androidx.appcompat:appcompat:$app_compat_version")
+    implementation("androidx.preference:preference:1.1.1")
+    implementation("androidx.security:security-crypto:1.1.0-alpha01")
+    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version")
+    implementation("com.google.android.material:material:1.1.0")
+    implementation("androidx.constraintlayout:constraintlayout:1.1.3")
 
     // Test libraries
-    testImplementation "junit:junit:4.12"
-    androidTestImplementation "androidx.test.ext:junit:1.1.1"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0"
+    testImplementation("junit:junit:4.12")
+    androidTestImplementation("androidx.test.ext:junit:1.1.1")
+    androidTestImplementation("androidx.test.espresso:espresso-core:3.2.0")
 
     def lifecycle_version = "2.2.0"
 
     // ViewModel
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
     // LiveData
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version")
     // Lifecycles only (without ViewModel or LiveData)
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version")
 
     // Saved state module for ViewModel
-    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
+    implementation("androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version")
 
     // alternately - if using Java8, use the following instead of lifecycle-compiler
-    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation("androidx.lifecycle:lifecycle-common-java8:$lifecycle_version")
+    implementation("androidx.lifecycle:lifecycle-extensions:2.2.0")
 
     // vernam library
-    implementation "com.github.zeckson:vernam-tools:0.2.0"
+    implementation("com.github.zeckson:vernam-tools:0.2.0")
 }
