--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,9 @@ captures/
 .idea/tasks.xml
 .idea/gradle.xml
 .idea/assetWizardSettings.xml
+.idea/compiler.xml
+.idea/misc.xml
+.idea/runConfigurations.xml
 .idea/dictionaries
 .idea/libraries
 # Android Studio 3 in .gitignore file.
