--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,16 +10,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.8
-      - name: Cache Gradle packages
-        uses: actions/cache@v2
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
-          restore-keys: ${{ runner.os }}-gradle
+          distribution: temurin
+          java-version: 11
+          cache: gradle
 
       - name: Echo current actor
         run: echo 'Current user is:' $GITHUB_ACTOR
