--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,8 @@
 name: Publish Artifacts
 
 on:
-#  release:
-#    types: [ released ] # https://docs.github.com/en/actions/reference/events-that-trigger-workflows#release
+  #  release:
+  #    types: [ released ] # https://docs.github.com/en/actions/reference/events-that-trigger-workflows#release
   push:
     tags:
       - '*' # build on any tag
@@ -53,11 +53,10 @@ jobs:
           path: app/build/zvernam.apk
 
       - name: Upload to release
-        uses: svenstaro/upload-release-action@v2
+        uses: svenstaro/upload-release-action@v2 #https://github.com/marketplace/actions/upload-files-to-a-github-release
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: app/build/zvernam.apk
           asset_name: zvernam-${{ github.event.release.tag_name }}
           tag: ${{ github.ref }}
-          overwrite: true
           body: "Release "${{ github.event.release.tag_name }}
