--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,4 +59,5 @@ jobs:
           file: app/build/zvernam.apk
           asset_name: zvernam-${{ github.event.release.tag_name }}
           tag: ${{ github.ref }}
-          body: "Release "${{ github.event.release.tag_name }}
+          overwrite: true
+          body: "Release ${{ github.event.release.tag_name }}"
