--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,8 @@
 name: Publish Artifacts
 
 on:
-  #  release:
-  #    types: [ released ] # https://docs.github.com/en/actions/reference/events-that-trigger-workflows#release
-  push:
-    tags:
-      - '*' # build on any tag
+  release:
+    types: [ released ] # https://docs.github.com/en/actions/reference/events-that-trigger-workflows#release
 
 jobs:
   release:
