--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,7 +54,7 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: app/build/zvernam.apk
-          asset_name: zvernam-${{ github.event.release.tag_name }}
+          asset_name: zvernam-${{ github.event.release.tag_name }}.apk
           tag: ${{ github.ref }}
           overwrite: true
           body: "Release ${{ github.event.release.tag_name }}"
