--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,10 @@ captures/
 .idea/runConfigurations.xml
 .idea/dictionaries
 .idea/libraries
+.idea/deploymentTargetDropDown.xml
+.idea/kotlinc.xml
+.idea/migrations.xml
+
 # Android Studio 3 in .gitignore file.
 .idea/caches
 .idea/modules.xml
