update to gradle 8.2.2

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,6 @@ android.enableJetifier=true
 kotlin.code.style=official
 # Enable exprerimental build cache to imporive build speed
 org.gradle.unsafe.configuration-cache=false
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
