--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,9 +16,9 @@ jobs:
     runs-on: ubuntu-latest
     env:
       VERSION: ${{ github.event.release.tag_name || inputs.version }}
-      BUNDLE_RELEASE_FILENAME: zvernam-${{ VERSION }}.aab
+      BUNDLE_RELEASE_FILENAME: zvernam-${{ env.VERSION }}.aab
       BUNDLE_FILE_PATH: app/build/outputs/bundle/release # Aka AAB file
-      APK_RELEASE_FILENAME: zvernam-${{ VERSION }}.aab
+      APK_RELEASE_FILENAME: zvernam-${{ env.VERSION }}.aab
       APK_FILE_PATH: app/build/outputs/apk/release
 
     steps:
