define top level version

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,11 +11,13 @@ on:
   release:
     types: [ published ] # https://docs.github.com/en/actions/reference/events-that-trigger-workflows#release
 
+env:
+  VERSION: ${{ github.event.release.tag_name || inputs.version }}
+
 jobs:
   release:
     runs-on: ubuntu-latest
     env:
-      VERSION: ${{ github.event.release.tag_name || inputs.version }}
       BUNDLE_RELEASE_FILENAME: zvernam-${{ env.VERSION }}.aab
       BUNDLE_FILE_PATH: app/build/outputs/bundle/release # Aka AAB file
       APK_RELEASE_FILENAME: zvernam-${{ env.VERSION }}.aab
