--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -96,8 +96,8 @@ jobs:
           ls -lah
           echo ${{ steps.sign.outputs.signedReleaseFile }}        
 
-      - name: Move Signed File
-        run: mv ${{ steps.sign_apk.outputs.signedReleaseFile }} ./${{ env.APK_RELEASE_FILENAME }}
+      - name: Rename Signed APK File
+        run: mv ${{ steps.sign_app.signedReleaseFile1 }} ./${{ env.APK_RELEASE_FILENAME }}
 
       - name: Upload Signed artifacts
         uses: actions/upload-artifact@v4
