--- a/.gitignore
+++ b/.gitignore
@@ -36,26 +36,12 @@ proguard/
 # Android Studio captures folder
 captures/
 
-# IntelliJ
-*.iml
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
-.idea/assetWizardSettings.xml
-.idea/compiler.xml
-.idea/misc.xml
-.idea/runConfigurations.xml
-.idea/dictionaries
-.idea/libraries
-.idea/deploymentTargetDropDown.xml
-.idea/kotlinc.xml
-.idea/migrations.xml
+# Ignore most Android Studio project files
+.idea/*
 
-# Android Studio 3 in .gitignore file.
-.idea/caches
-.idea/modules.xml
-# Comment next line if keeping position of elements in Navigation Editor is relevant for you
-.idea/navEditor.xml
+# But keep useful shared configs
+!.idea/codeStyles
+!.idea/runConfigurations
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
